2000-02-27  Ettore Perazzoli  <ettore@helixcode.com>

	* htmlengine-edit-delete.c: New file.
	* htmlengine-edit-delete.h: New file.

	* htmlengine-edit.c (html_engine_delete): Removed.

	* htmlengine-edit-fontstyle.c (split_safely): New helper function.
	This splits text and makes sure that the cursor's object pointer
	and offset are still valid after the split.
	(set_font_style_in_selection_forall): Use it.
	(set_font_style_in_selection_forall): Likewise.

	* htmlengine-edit-insert.c (html_engine_insert_para): Calc size on
	the two halves of the paragraph that gets splitted.

	* htmlcluev.c (do_layout): New helper function.
	(calc_size): Use it.
	(relayout): New function, implementation of
	`HTMLObject::relayout'.  It uses `do_layout', and relayouts
	objects in the clue without recalculating the size for each of
	them.
	(html_cluev_class_init): Install the new `relayout'
	implementation.

2000-02-26  Larry Ewing  <lewing@helixcode.com>

	* htmlclueh.c (calc_size): for HTML_VALIGN_TOP the clue->descent
	should be incremented rather than the clue->ascent to get the
	correct flow in the the remaining items.

2000-02-26  Ettore Perazzoli  <ettore@helixcode.com>

	* htmlengine-edit-paste.c (html_engine_paste) [! PARANOID_DEBUG]:
	Removed ultra-verbose debugging messages.

	* gtkhtml.c (class_init): Setup
	"current_paragraph_alignment_changed".
	(update_styles): Emit it if the current paragraph alignment is
	changed.
	(init): Initialize `paragraph_alignment' to
	`GTK_HTML_PARAGRAPH_ALIGNMENT_LEFT'.
	(gtk_html_align_paragraph): New function.
	(paragraph_alignment_to_html): New helper function.
	(html_alignment_to_paragraph): New helper function.
	(gtk_html_cut): New function.
	(gtk_html_copy): New function.
	(gtk_html_paste): New function.
	(gtk_html_undo): New function.
	(gtk_html_redo): New function.
	(key_press_event): Use `gtk_html_{cut,copy,paste,undo,redo}'
	instead of `html_engine_{cut,copy,paste,undo,redo}'.
