@@ -13,6 +13,7 @@ libgtkhtmldir = $(includedir)/gtkhtml
 
 libgtkhtml_HEADERS =				\
 	gtkhtml-embedded.h			\
+	gtkhtml-keybinding.h			\
 	gtkhtml-private.h			\
 	gtkhtml.h				\
 	gtkhtmldebug.h				\
@@ -78,6 +79,7 @@ libgtkhtml_HEADERS =				\
 
 libgtkhtml_la_SOURCES =				\
 	gtkhtml-embedded.c			\
+	gtkhtml-keybinding.c			\
 	gtkhtml.c				\
 	gtkhtmldebug.c				\
 	gtkhtmlfontstyle.c			\
