@@ -1,5 +1,11 @@
 2000-02-27  Ettore Perazzoli  <ettore@helixcode.com>
 
+	* gtkhtml.c (key_press_event): Use `gtk_html_handle_key_event()'
+	from `gtkhtml-keybinding.c'.
+
+	* gtkhtml-keybinding.c: New file.
+	* gtkhtml-keybinding.h: New file.
+
 	* htmlengine-edit-delete.c: New file.
 	* htmlengine-edit-delete.h: New file.
 
